--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 nav, main {
-    border: 2px solid #000;
+    /* border: 2px solid #000; */
     margin-bottom: 10px;
     padding: 10px;
   }
