--- a/src/style.css
+++ b/src/style.css
@@ -7,21 +7,14 @@
   src: url('../src/assets/fonts/Sarabun/Sarabun-Light.ttf');
 }
 
+html,
+body {
+    overflow-x: clip;
+    scroll-behavior: smooth;
+    scroll-padding: 8rem;
+}
+
 #app {
   font-family: Sarabun, sans-serif;
   font-weight: 400;
 }
-nav, main {
-    /* border: 2px solid #000; */
-    margin-bottom: 10px;
-    padding: 10px;
-  }
-  
-  nav > a + a {
-    margin-left: 10px;
-  }
-  
-  h2 {
-    border-bottom: 1px solid #ccc;
-    margin: 0 0 20px;
-  }
