--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,11 @@
   src: url('../src/assets/fonts/Sarabun/Sarabun-Light.ttf');
 }
 
+@font-face {
+  font-family: Prompt;
+  src: url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+}
+
 html,
 body {
     overflow-x: clip;
@@ -15,6 +20,12 @@ body {
 }
 
 #app {
-  font-family: Sarabun, sans-serif;
+  font-family: "Sarabun", sans-serif;
   font-weight: 400;
+  font-style: normal;
+}
+
+*:focus {
+  outline-width: 0px !important;
+  outline-offset: 0px !important;
 }
