--- a/src/style.css
+++ b/src/style.css
@@ -54,3 +54,20 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
+.swal2-popup {
+  font-family: "Sarabun", sans-serif !important;
+  font-weight: 500;
+  font-style: normal;
+  border-radius: 1.5rem !important;
+  padding: 0 0 2.25em !important;
+}
+
+.swal2-styled.swal2-confirm {
+  border: 0;
+  border-radius: 1.25em;
+  background: initial;
+  background-color: #7066e0;
+  color: #fff;
+  font-size: 1em;
+}
+
